examples/invalid/wrongParameters.ccs
X[channel,message] = channel!message.do.something.else.X[message,message];

X[out,0]

